--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Photogenic - Free Portfolio Bootstrap Template</title>
+    <title>Belfast Ultimate Frisbee</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
     <div id="fh5co-hero-carousel" class="carousel slide header" data-ride="carousel">
         <nav class="navbar fixed-top navbar-expand-xl">
             <div class="container">
-                <a class="navbar-brand mobile-logo" href="#"><img src="images/logo.png" alt="Vista Pro" /></a>
+                <a class="navbar-brand mobile-logo" href="#"><img src="images/BUlogo.jpg" alt="Vista Pro" /></a>
                 <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse">
                     <span class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span> </button>
 
@@ -518,5 +518,6 @@
     <script src="js/isotope-docs.min.js?6"></script>
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
