--- a/index.html
+++ b/index.html
@@ -446,63 +446,20 @@
         <div class="container" id="contact">
             <div class="row">
                 <div class="col-lg-5">
-                    <h2>CONTACT US TODAY NOW</h2>
-                    <p class="light">
-                        If you are looking for a Photographer
-                    </p>
+                    <h2>CONTACT</h2>
                     <p>
                         <span class="email"><img src="images/email.png"
-                                alt="email icon" /></span><b>contact@example.com</b>
-                    </p>
-                    <p>
-                        <span class="phone"><img src="images/phone.png" alt="phone icon" /></span><b>+123-456-7890</b>
+                                alt="email icon" /></span><b>chairperson.belfastultimate@gmail.com</b>
                     </p>
                     <h3>We Are Social:</h3>
                     <ul class="navbar-nav float-left social-links footer-social">
                         <li class="nav-item">
-                            <a class="nav-link" href="https://www.facebook.com/fh5co"><i class="fab fa-facebook-f"></i></a>
+                            <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-pinterest-p"></i></a>
+                        <li class="nav-item"><a class="https://www.tiktok.com/@belfast.ultimate" href="#"><i class="fab fa-tiktok-p"></i></a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="https://twitter.com/fh5co"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-google-plus-g"></i></a>
-                        </li>
-
                     </ul>
                 </div>
-
-                <div class="col-lg-7">
-                    <div class="form-box">
-                        <h4>What would you like to talk about</h4>
-                        <p>We'd Love to Hear From you !</p>
-                        <hr />
-                        <table class="table table-light table-borderless">
-                            <tr>
-                                <td><input type="text" class="form-control" placeholder="Name...">
-                                </td>
-
-                                <td><input type="text" class="form-control" placeholder="Email address">
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td colspan="2"><textarea class="form-control" placeholder="You Message"></textarea>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2">
-                                    <button type="submit">
-                                        SUBMIT NOW
-                                    </button>
-
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-
-
             </div>
         </div>
     </footer>
@@ -521,3 +478,4 @@
 
 
 </html>
+
