--- a/index.html
+++ b/index.html
@@ -36,15 +36,10 @@
                         <p class="text-left follow">Follow Us:</p>
                         <ul class="navbar-nav float-left social-links">
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.facebook.com/fh5co"><i class="fab fa-facebook-f"></i></a>
+                                <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-pinterest-p"></i></a>
+                            <li class="nav-item"><a class="https://www.tiktok.com/@belfast.ultimate" href="#"><i class="fab fa-tiktok-p"></i></a>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="https://twitter.com/fh5co"><i class="fab fa-twitter"></i></a>
-                            </li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-google-plus-g"></i></a>
-                            </li>
-
                         </ul>
                     </div>
 
@@ -456,7 +451,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
                         </li>
-                        <li class="nav-item"><a class="https://www.tiktok.com/@belfast.ultimate" href="#"><i class="fab fa-tiktok-p"></i></a>
+                        <li class="nav-item"><a class="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1" href="#"><i class="fa-brands fa-tiktok"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -478,4 +473,5 @@
 
 
 </html>
+
 
