--- a/index.html
+++ b/index.html
@@ -155,19 +155,7 @@
                 <div class="col-lg-8">
                     <div class="about-us-content">
                         <h2>ABOUT US</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed
-                            ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-                            aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-                            consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et
-                            dolore magnam aliquam quaerat voluptatem.</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <p>We're an amateur Ultimate Frisbee team in Belfast. We currently play at the top of Ormeau park beside the inside tennis courts. Join us on Mondays 6.30pm!</p>
                     </div>
 
 
@@ -179,9 +167,8 @@
 
     <div class="container-fluid fh5co-portfolio" id="portfolio">
         <div class="container">
-            <h2>OUR PORTFOLIO</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad </p>
+            <h2>Some Images!</h2>
+            <p>Testing</p>
             <h3>FILTER BY:</h3>
             <div class="portfolio-tab portfolioFilter">
                 <ul>
@@ -398,11 +385,8 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news1.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>How to take a Awosome photo Of
-                                    Groups! </h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                                <h5>Join us at Training!</h5>
+                                <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
                             </div>
                         </div>
                     </div>
@@ -410,11 +394,8 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news2.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>How to take a Awosome photo Of
-                                    Groups! </h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                                <h5>Mixed Gender Sport </h5>
+                                <p class="card-text">Test</p>
                             </div>
                         </div>
                     </div>
@@ -422,11 +403,8 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news3.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>How to take a Awosome photo Of
-                                    Groups! </h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo </p>
+                                <h5>Test </h5>
+                                <p class="card-text">Test</p>
                             </div>
                         </div>
                     </div>
@@ -473,5 +451,6 @@
 
 
 </html>
+
 
 
