--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
 
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/home-bg.png">
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU7.jpg">
 
                 <div class="carousel-caption d-md-block">
-                    <p class="frst-hrd">Everyone is Photogenic</p>
+                    <p class="frst-hrd">1</p>
                     <h5>Today’s SPECIAL MOMENTS.</h5>
                     <p>Creating a timeless look, coupled with a flawless moment</p>
 
@@ -86,20 +86,20 @@
 
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/home-bg.png">
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU7.jpg">
 
                 <div class="carousel-caption d-md-block">
-                    <p class="frst-hrd">Everyone is Photogenic</p>
+                    <p class="frst-hrd">2</p>
                     <h5>Today’s SPECIAL MOMENTS.</h5>
                     <p>Creating a timeless look, coupled with a flawless moment</p>
 
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/home-bg.png">
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU7.jpg">
 
                 <div class="carousel-caption d-md-block">
-                    <p class="frst-hrd">Everyone is Photogenic</p>
+                    <p class="frst-hrd">3</p>
                     <h5>Today’s SPECIAL MOMENTS.</h5>
                     <p>Creating a timeless look, coupled with a flawless moment</p>
 
@@ -451,6 +451,7 @@
 
 
 </html>
+
 
 
 
