--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
 
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU7.jpg">
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU6.jpg">
 
                 <div class="carousel-caption d-md-block">
                     <p class="frst-hrd">1</p>
@@ -86,7 +86,7 @@
 
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU7.jpg">
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU8.jpg">
 
                 <div class="carousel-caption d-md-block">
                     <p class="frst-hrd">2</p>
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU7.jpg">
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU5.jpg">
 
                 <div class="carousel-caption d-md-block">
                     <p class="frst-hrd">3</p>
@@ -174,42 +174,12 @@
                 <ul>
                     <li><a href="#" data-filter="*" class="active">ALL</a>
                     </li>
-                    <li><a href="#" data-filter=".landscape">landscape</a>
+                    <li><a href="#" data-filter=".funny">funny</a>
                     </li>
-                    <li><a href="#" data-filter=".green">Green</a>
-                    </li>
-                    <li><a href="#" data-filter=".building">Building</a>
-                    </li>
-                    <li><a href="#" data-filter=".wedding">Weeding</a>
-                    </li>
-                    <li><a href="#" data-filter=".nature">Nature</a>
-                    </li>
-                    <li><a href="#" data-filter=".landscape">landscape</a>
-                    </li>
-                    <li><a href="#" data-filter=".green">Green</a>
-                    </li>
-                    <li><a href="#" data-filter=".building">Building</a>
-                    </li>
-                    <li><a href="#" data-filter=".wedding">Weeding</a>
-                    </li>
-                    <li><a href="#" data-filter=".nature">Nature</a>
-                    </li>
-                    <li><a href="#" data-filter=".landscape">landscape</a>
-                    </li>
-                    <li><a href="#" data-filter=".green">Green</a>
-                    </li>
-                    <li><a href="#" data-filter=".building">Building</a>
-                    </li>
-                    <li><a href="#" data-filter=".wedding">Weeding</a>
-                    </li>
-                    <li><a href="#" data-filter=".nature">Nature</a>
-                    </li>
-                    <li><a href="#" data-filter=".landscape">landscape</a>
-                    </li>
-                    <li><a href="#" data-filter=".green">Green</a>
-                    </li>
-                    <li><a href="#" data-filter=".building">Building</a>
-                    </li>
+                    <li><a href="#" data-filter=".group">group</a>
+                    </li>     
+					<li><a href="#" data-filter=".individual">individual</a>
+                    </li>    
                 </ul>
             </div>
 
@@ -217,146 +187,12 @@
 
                 <div class="portfolioContainer">
 
-                    <div class="gallary building nature green">
-                        <img src="images/img1.png" alt="">
-                        <div class="card-img-overlay">
-                            <div class="top-buttons clearfix">
-                                <a href="#"><span class="img-icon"><img src="images/share.png"
-                                            alt="share icon" /></span> <span class="txt">Share Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/heart.png"
-                                            alt="share icon" /></span> <span class="txt">190+ Likes</span></a>
-                            </div>
-
-                            <div class="top-buttons bottom-buttons clearfix">
-                                <a href="#"><span class="txt">Contact Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/eye.png" alt="share icon" /></span>
-                                    <span class="txt">Full View</span></a>
-                            </div>
-                        </div>
-
+                    <div class="funny individual">
+                        <img src="images/testimages/BU1.png" alt="">
                     </div>
-                    <div class="gallary center-img wedding">
-                        <img src="images/img2.png" class="half-height" alt="">
-                        <div class="card-img-overlay">
-                            <div class="top-buttons clearfix">
-                                <a href="#"><span class="img-icon"><img src="images/share.png"
-                                            alt="share icon" /></span> <span class="txt">Share Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/heart.png"
-                                            alt="share icon" /></span> <span class="txt">190+ Likes</span></a>
-                            </div>
-
-                            <div class="top-buttons bottom-buttons clearfix">
-                                <a href="#"><span class="txt">Contact Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/eye.png" alt="share icon" /></span>
-                                    <span class="txt">Full View</span></a>
-                            </div>
-                        </div>
+                    <div class="individual">
+                        <img src="imagestestimages/BU2.png" class="half-height" alt="">
                     </div>
-
-                    <div class="gallary building">
-
-                        <img src="images/img4.png" alt="">
-                        <div class="card-img-overlay">
-                            <div class="top-buttons clearfix">
-                                <a href="#"><span class="img-icon"><img src="images/share.png"
-                                            alt="share icon" /></span> <span class="txt">Share Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/heart.png"
-                                            alt="share icon" /></span> <span class="txt">190+ Likes</span></a>
-                            </div>
-
-                            <div class="top-buttons bottom-buttons clearfix">
-                                <a href="#"><span class="txt">Contact Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/eye.png" alt="share icon" /></span>
-                                    <span class="txt">Full View</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gallary center-img landscape nature">
-                        <img src="images/img3.png" class="half-height" alt="">
-                        <div class="card-img-overlay">
-                            <div class="top-buttons clearfix">
-                                <a href="#"><span class="img-icon"><img src="images/share.png"
-                                            alt="share icon" /></span> <span class="txt">Share Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/heart.png"
-                                            alt="share icon" /></span> <span class="txt">190+ Likes</span></a>
-                            </div>
-
-                            <div class="top-buttons bottom-buttons clearfix">
-                                <a href="#"><span class="txt">Contact Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/eye.png" alt="share icon" /></span>
-                                    <span class="txt">Full View</span></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="gallary">
-                        <img src="images/img5.png" alt="">
-                        <div class="card-img-overlay">
-                            <div class="top-buttons clearfix">
-                                <a href="#"><span class="img-icon"><img src="images/share.png"
-                                            alt="share icon" /></span> <span class="txt">Share Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/heart.png"
-                                            alt="share icon" /></span> <span class="txt">190+ Likes</span></a>
-                            </div>
-
-                            <div class="top-buttons bottom-buttons clearfix">
-                                <a href="#"><span class="txt">Contact Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/eye.png" alt="share icon" /></span>
-                                    <span class="txt">Full View</span></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="gallary center-img landscape">
-                        <img src="images/img6.png" alt="">
-                        <div class="card-img-overlay">
-                            <div class="top-buttons clearfix">
-                                <a href="#"><span class="img-icon"><img src="images/share.png"
-                                            alt="share icon" /></span> <span class="txt">Share Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/heart.png"
-                                            alt="share icon" /></span> <span class="txt">190+ Likes</span></a>
-                            </div>
-
-                            <div class="top-buttons bottom-buttons clearfix">
-                                <a href="#"><span class="txt">Contact Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/eye.png" alt="share icon" /></span>
-                                    <span class="txt">Full View</span></a>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="gallary building nature">
-                        <img src="images/img4.png" alt="">
-                        <div class="card-img-overlay">
-                            <div class="top-buttons clearfix">
-                                <a href="#"><span class="img-icon"><img src="images/share.png"
-                                            alt="share icon" /></span> <span class="txt">Share Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/heart.png"
-                                            alt="share icon" /></span> <span class="txt">190+ Likes</span></a>
-                            </div>
-
-                            <div class="top-buttons bottom-buttons clearfix">
-                                <a href="#"><span class="txt">Contact Now</span></a>
-
-                                <a href="#"><span class="img-icon"><img src="images/eye.png" alt="share icon" /></span>
-                                    <span class="txt">Full View</span></a>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
 
@@ -421,7 +257,7 @@
                 <div class="col-lg-5">
                     <h2>CONTACT</h2>
                     <p>
-                        <span class="email"><img src="images/email.png"
+                        <span class="email"><img src="images/icons/email.png"
                                 alt="email icon" /></span><b>chairperson.belfastultimate@gmail.com</b>
                     </p>
                     <h3>We Are Social:</h3>
@@ -451,6 +287,7 @@
 
 
 </html>
+
 
 
 
