--- a/index.html
+++ b/index.html
@@ -186,27 +186,22 @@
             <div class="row">
 
                 <div class="portfolioContainer">
-
                     <div class="funny individual">
                         <img src="images/testimages/BU1.png" alt="">
                     </div>
                     <div class="individual">
-                        <img src="imagestestimages/BU2.png" class="half-height" alt="">
+                        <img src="images/testimages/BU2.png" class="half-height" alt="">
                     </div>
                 </div>
             </div>
 
             <div class="row portfolioFilter">
                 <ul class="indicators">
-                    <li><a href="#" data-filter=".landscape" class="active"></a>
+                    <li><a href="#" data-filter=".funny" class="active"></a>
                     </li>
-                    <li><a href="#" data-filter=".green"></a>
+                    <li><a href="#" data-filter=".group"></a>
                     </li>
-                    <li><a href="#" data-filter=".building"></a>
-                    </li>
-                    <li><a href="#" data-filter=".wedding"></a>
-                    </li>
-                    <li><a href="#" data-filter=".nature"></a>
+                    <li><a href="#" data-filter=".individual"></a>
                     </li>
                 </ul>
             </div>
@@ -287,6 +282,7 @@
 
 
 </html>
+
 
 
 
