--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
                             </li>
-                            <li class="nav-item"><a class="https://www.tiktok.com/@belfast.ultimate" href="#"><i class="fab fa-tiktok-p"></i></a>
+                            	<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class="fa-brands fa-tiktok"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -260,7 +260,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
                         </li>
-                        <li class="nav-item"><a class="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1" href="#"><i class="fa-brands fa-tiktok"></i></a>
+                        <li class="nav-item">
+							<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class="fa-brands fa-tiktok"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -282,6 +283,7 @@
 
 
 </html>
+
 
 
 
