--- a/index.html
+++ b/index.html
@@ -169,45 +169,26 @@
         <div class="container">
             <h2>Some Images!</h2>
             <p>Testing</p>
-            <h3>FILTER BY:</h3>
-            <div class="portfolio-tab portfolioFilter">
-                <ul>
-                    <li><a href="#" data-filter="*" class="active">ALL</a>
-                    </li>
-                    <li><a href="#" data-filter=".funny">funny</a>
-                    </li>
-                    <li><a href="#" data-filter=".group">group</a>
-                    </li>     
-					<li><a href="#" data-filter=".individual">individual</a>
-                    </li>    
-                </ul>
-            </div>
-
             <div class="row">
-
-                <div class="portfolioContainer">
-                    <div class="funny individual">
-                        <img src="images/testimages/BU1.png" alt="">
-                    </div>
-                    <div class="individual">
-                        <img src="images/testimages/BU2.png" class="half-height" alt="">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row portfolioFilter">
-                <ul class="indicators">
-                    <li><a href="#" data-filter=".funny" class="active"></a>
-                    </li>
-                    <li><a href="#" data-filter=".group"></a>
-                    </li>
-                    <li><a href="#" data-filter=".individual"></a>
-                    </li>
-                </ul>
-            </div>
+  				<div class="column">
+				    <img src="/images/testimages/BU1">
+				    <img src="/images/testimages/BU2">
+				    <img src="/images/testimages/BU3">
+				    <img src="/images/testimages/BU4">
+				</div>
+				  <div class="column">
+				    <img src="/images/testimages/BU5">
+				    <img src="/images/testimages/BU6">
+					<img src="/images/testimages/BU7">
+					<img src="/images/testimages/BU8">
+				  </div>
+				  <div class="column">
+				    <img src="/images/testimages/BU9">
+				  </div>
+			</div>
         </div>
-
     </div>
+	
     <div class="container-fluid fh5co-news" id="news">
         <div class="container">
             <h2>OUR NEWS</h2>
@@ -283,6 +264,7 @@
 
 
 </html>
+
 
 
 
