--- a/index.html
+++ b/index.html
@@ -163,31 +163,31 @@
             </div>
         </div>
     </div>
-
-
-    <div class="container-fluid fh5co-portfolio" id="portfolio">
-        <div class="container">
+    <div class="container">
             <h2>Some Images!</h2>
             <p>Testing</p>
-            <div class="row">
-  				<div class="column">
-				    <img src="/images/testimages/BU1">
-				    <img src="/images/testimages/BU2">
-				    <img src="/images/testimages/BU3">
-				    <img src="/images/testimages/BU4">
+			<div class="portfolio-tab portfolioFilter"
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
 				</div>
-				  <div class="column">
-				    <img src="/images/testimages/BU5">
-				    <img src="/images/testimages/BU6">
-					<img src="/images/testimages/BU7">
-					<img src="/images/testimages/BU8">
-				  </div>
-				  <div class="column">
-				    <img src="/images/testimages/BU9">
-				  </div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				</div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				</div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				</div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				</div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				</div>
 			</div>
-        </div>
-    </div>
+	</div>
+
 	
     <div class="container-fluid fh5co-news" id="news">
         <div class="container">
@@ -264,6 +264,7 @@
 
 
 </html>
+
 
 
 
