--- a/index.html
+++ b/index.html
@@ -171,19 +171,31 @@
 				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU2.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU3.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU4.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU5.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU6.jpg" width="200" height="140"></a>
+				</div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU7.jpg" width="200" height="140"></a>
+				</div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU8.jpg" width="200" height="140"></a>
+				</div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU9.jpg" width="200" height="140"></a>
+				</div>
+				<div class="img">
+				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU10.jpg" width="200" height="140"></a>
 				</div>
 			</div>
 	</div>
@@ -206,8 +218,8 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news2.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>Mixed Gender Sport </h5>
-                                <p class="card-text">Test</p>
+                                <h5>Join us at Training!</h5>
+                                <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
                             </div>
                         </div>
                     </div>
@@ -215,8 +227,8 @@
                     <div>
                         <div class="card text-center"> <img class="card-img-top" src="images/news3.png" alt="">
                             <div class="card-body text-left pr-0 pl-0">
-                                <h5>Test </h5>
-                                <p class="card-text">Test</p>
+                                <h5>Join us at Training!</h5>
+                                <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
                             </div>
                         </div>
                     </div>
@@ -264,6 +276,7 @@
 
 
 </html>
+
 
 
 
