--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
                             </li>
-                            	<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class="fa-brands fa-tiktok"></i></a>
+                            	<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class="fab fa-tiktok"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -78,8 +78,8 @@
 
                 <div class="carousel-caption d-md-block">
                     <p class="frst-hrd">1</p>
-                    <h5>Today’s SPECIAL MOMENTS.</h5>
-                    <p>Creating a timeless look, coupled with a flawless moment</p>
+                    <h5>BELFAST ULTIMATE FRISBEE</h5>
+                    <p>JOIN US</p>
 
                 </div>
 
@@ -90,8 +90,8 @@
 
                 <div class="carousel-caption d-md-block">
                     <p class="frst-hrd">2</p>
-                    <h5>Today’s SPECIAL MOMENTS.</h5>
-                    <p>Creating a timeless look, coupled with a flawless moment</p>
+                    <h5>BELFAST ULTIMATE FRISBEE</h5>
+                    <p>JOIN US</p>
 
                 </div>
             </div>
@@ -100,8 +100,8 @@
 
                 <div class="carousel-caption d-md-block">
                     <p class="frst-hrd">3</p>
-                    <h5>Today’s SPECIAL MOMENTS.</h5>
-                    <p>Creating a timeless look, coupled with a flawless moment</p>
+                    <h5>BELFAST ULTIMATE FRISBEE</h5>
+                    <p>JOIN US</p>
 
                 </div>
             </div>
@@ -142,13 +142,13 @@
 
                     <div class="owl-carousel owl-carousel1 owl-theme">
                         <div>
-                            <img src="images/slide.png" alt="" class="img-fluid" />
+                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
                         </div>
                         <div>
-                            <img src="images/slide.png" alt="" class="img-fluid" />
+                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
                         </div>
                         <div>
-                            <img src="images/slide.png" alt="" class="img-fluid" />
+                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
                         </div>
                     </div>
                 </div>
@@ -171,31 +171,31 @@
 				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU2.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU2.jpg"><img src="images/testimages/BU2.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU3.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU3.jpg"><img src="images/testimages/BU3.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU4.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU4.jpg"><img src="images/testimages/BU4.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU5.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU5.jpg"><img src="images/testimages/BU5.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU6.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU6.jpg"><img src="images/testimages/BU6.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU7.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU7.jpg"><img src="images/testimages/BU7.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU8.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU8.jpg"><img src="images/testimages/BU8.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU9.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU9.jpg"><img src="images/testimages/BU9.jpg" width="200" height="140"></a>
 				</div>
 				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU10.jpg" width="200" height="140"></a>
+				  <a target="_blank" href="images/testimages/BU10.jpg"><img src="images/testimages/BU10.jpg" width="200" height="140"></a>
 				</div>
 			</div>
 	</div>
@@ -207,7 +207,7 @@
             <div class="row">
                 <div class="owl-carousel owl-carousel2 owl-theme">
                     <div>
-                        <div class="card text-center"> <img class="card-img-top" src="images/news1.png" alt="">
+                        <div class="card text-center"> <img class="card-img-top" src="images/testimages/BU10.jpg" alt="">
                             <div class="card-body text-left pr-0 pl-0">
                                 <h5>Join us at Training!</h5>
                                 <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
@@ -216,7 +216,7 @@
                     </div>
 
                     <div>
-                        <div class="card text-center"> <img class="card-img-top" src="images/news2.png" alt="">
+                        <div class="card text-center"> <img class="card-img-top" src="images/testimages/BU10.jpg" alt="">
                             <div class="card-body text-left pr-0 pl-0">
                                 <h5>Join us at Training!</h5>
                                 <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
@@ -225,7 +225,7 @@
                     </div>
 
                     <div>
-                        <div class="card text-center"> <img class="card-img-top" src="images/news3.png" alt="">
+                        <div class="card text-center"> <img class="card-img-top" src="images/testimages/BU10.jpg" alt="">
                             <div class="card-body text-left pr-0 pl-0">
                                 <h5>Join us at Training!</h5>
                                 <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
@@ -276,6 +276,7 @@
 
 
 </html>
+
 
 
 
