--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a class="nav-link" href="#about-us">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#portfolio">Portfolio</a>
+                            <a class="nav-link" href="#some-images">Some Images</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact Us</a>
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-lg-4">
 
-                    <svg class="back-bg" viewBox="0 0 535 618">
+                    <svg class="back-bg" viewBox="0 0 800 800">
                         <defs>
                             <linearGradient id="PSgrad_0" x1="0%" x2="100%" y1="0%" y2="0%">
                                 <stop offset="0%" stop-color="rgb(88,192,255)" stop-opacity="1" />
@@ -163,43 +163,45 @@
             </div>
         </div>
     </div>
-    <div class="container">
-            <h2>Some Images!</h2>
-            <p>Testing</p>
-			<div class="portfolio-tab portfolioFilter"
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+	
+	<div class="container-fluid fh5co-some-images" id="some-images">
+	    <div class="container">
+	            <h2>Some Images!</h2>
+	            <p>Testing</p>
+				<div class="portfolio-tab portfolioFilter"
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU2.jpg"><img src="images/testimages/BU2.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU3.jpg"><img src="images/testimages/BU3.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU4.jpg"><img src="images/testimages/BU4.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU5.jpg"><img src="images/testimages/BU5.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU6.jpg"><img src="images/testimages/BU6.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU7.jpg"><img src="images/testimages/BU7.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU8.jpg"><img src="images/testimages/BU8.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU9.jpg"><img src="images/testimages/BU9.jpg" width="200" height="140"></a>
+					</div>
+					<div class="img">
+					  <a target="_blank" href="images/testimages/BU10.jpg"><img src="images/testimages/BU10.jpg" width="200" height="140"></a>
+					</div>
 				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU2.jpg"><img src="images/testimages/BU2.jpg" width="200" height="140"></a>
-				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU3.jpg"><img src="images/testimages/BU3.jpg" width="200" height="140"></a>
-				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU4.jpg"><img src="images/testimages/BU4.jpg" width="200" height="140"></a>
-				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU5.jpg"><img src="images/testimages/BU5.jpg" width="200" height="140"></a>
-				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU6.jpg"><img src="images/testimages/BU6.jpg" width="200" height="140"></a>
-				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU7.jpg"><img src="images/testimages/BU7.jpg" width="200" height="140"></a>
-				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU8.jpg"><img src="images/testimages/BU8.jpg" width="200" height="140"></a>
-				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU9.jpg"><img src="images/testimages/BU9.jpg" width="200" height="140"></a>
-				</div>
-				<div class="img">
-				  <a target="_blank" href="images/testimages/BU10.jpg"><img src="images/testimages/BU10.jpg" width="200" height="140"></a>
-				</div>
-			</div>
+		</div>
 	</div>
-
 	
     <div class="container-fluid fh5co-news" id="news">
         <div class="container">
@@ -276,6 +278,7 @@
 
 
 </html>
+
 
 
 
