--- a/index.html
+++ b/index.html
@@ -163,45 +163,102 @@
             </div>
         </div>
     </div>
-	
+
 	<div class="container-fluid fh5co-some-images" id="some-images">
-	    <div class="container">
-	            <h2>Some Images!</h2>
-	            <p>Testing</p>
-				<div class="portfolio-tab portfolioFilter"
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU1.jpg"><img src="images/testimages/BU1.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU2.jpg"><img src="images/testimages/BU2.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU3.jpg"><img src="images/testimages/BU3.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU4.jpg"><img src="images/testimages/BU4.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU5.jpg"><img src="images/testimages/BU5.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU6.jpg"><img src="images/testimages/BU6.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU7.jpg"><img src="images/testimages/BU7.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU8.jpg"><img src="images/testimages/BU8.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU9.jpg"><img src="images/testimages/BU9.jpg" width="200" height="140"></a>
-					</div>
-					<div class="img">
-					  <a target="_blank" href="images/testimages/BU10.jpg"><img src="images/testimages/BU10.jpg" width="200" height="140"></a>
-					</div>
-				</div>
+		<h2>Some Images!</h2>
+	    <p>Testing</p>
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU1.jpg">
+		      <img src="BU1.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
 		</div>
-	</div>
+		
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU2.jpg">
+		      <img src="BU2.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+		
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU3.jpg">
+		      <img src="BU3.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+		
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU4.jpg">
+		      <img src="BU4.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU5.jpg">
+		      <img src="BU5.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU6.jpg">
+		      <img src="BU6.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU7.jpg">
+		      <img src="BU7.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU8.jpg">
+		      <img src="B8.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU9.jpg">
+		      <img src="B9.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/B10.jpg">
+		      <img src="B10.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+	<div class="clearfix"></div>
+	</div>           
+
 	
     <div class="container-fluid fh5co-news" id="news">
         <div class="container">
@@ -278,6 +335,7 @@
 
 
 </html>
+
 
 
 
