--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU1.jpg">
-		      <img src="BU1.jpg" alt="">
+		      <img src="images/testimages/BU1.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -179,7 +179,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU2.jpg">
-		      <img src="BU2.jpg" alt="">
+		      <img src="images/testimages/BU2.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -188,7 +188,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU3.jpg">
-		      <img src="BU3.jpg" alt="">
+		      <img src="images/testimages/BU3.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -197,7 +197,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU4.jpg">
-		      <img src="BU4.jpg" alt="">
+		      <img src="images/testimages/BU4.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -206,7 +206,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU5.jpg">
-		      <img src="BU5.jpg" alt="">
+		      <img src="images/testimages/BU5.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -215,7 +215,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU6.jpg">
-		      <img src="BU6.jpg" alt="">
+		      <img src="images/testimages/BU6.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -224,7 +224,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU7.jpg">
-		      <img src="BU7.jpg" alt="">
+		      <img src="images/testimages/BU7.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -233,7 +233,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU8.jpg">
-		      <img src="B8.jpg" alt="">
+		      <img src="images/testimages/BU8.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -242,7 +242,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/BU9.jpg">
-		      <img src="B9.jpg" alt="">
+		      <img src="images/testimages/BU9.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -251,7 +251,7 @@
 		<div class="responsive">
 		  <div class="gallery">
 		    <a target="_blank" href="images/testimages/B10.jpg">
-		      <img src="B10.jpg" alt="">
+		      <img src="images/testimages/BU10.jpg" alt="">
 		    </a>
 		    <div class="desc">Add a description of the image here</div>
 		  </div>
@@ -335,6 +335,7 @@
 
 
 </html>
+
 
 
 
