--- a/index.html
+++ b/index.html
@@ -13,7 +13,54 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- owl carousel css-->
     <link rel="stylesheet" href="owl-carousel/assets/owl.carousel.min.css" type="text/css">
-
+	<style>
+			div.gallery {
+			  border: 1px solid #ccc;
+			}
+			
+			div.gallery:hover {
+			  border: 1px solid #777;
+			}
+			
+			div.gallery img {
+			  width: 100%;
+			  height: auto;
+			}
+			
+			div.desc {
+			  padding: 15px;
+			  text-align: center;
+			}
+			
+			* {
+			  box-sizing: border-box;
+			}
+			
+			.responsive {
+			  padding: 0 6px;
+			  float: left;
+			  width: 24.99999%;
+			}
+			
+			@media only screen and (max-width: 700px) {
+			  .responsive {
+			    width: 49.99999%;
+			    margin: 6px 0;
+			  }
+			}
+			
+			@media only screen and (max-width: 500px) {
+			  .responsive {
+			    width: 100%;
+			  }
+			}
+			
+			.clearfix:after {
+			  content: "";
+			  display: table;
+			  clear: both;
+			}
+	</style>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -335,6 +382,7 @@
 
 
 </html>
+
 
 
 
