--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div id="fh5co-hero-carousel" class="carousel slide header" data-ride="carousel">
         <nav class="navbar fixed-top navbar-expand-xl">
             <div class="container">
-                <a class="navbar-brand mobile-logo" href="#"><img src="images/BUlogo.jpg" alt="Vista Pro" /></a>
+                <a class="navbar-brand mobile-logo" href="#"><img src="images/testimages/BUlogo.jpg" alt="" /></a>
                 <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse">
                     <span class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span> </button>
 
@@ -84,15 +84,17 @@
                         <ul class="navbar-nav float-left social-links">
                             <li class="nav-item">
                                 <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
+								<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
                             </li>
-                            	<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class="fab fa-tiktok"></i></a>
+							<li class="nav-item">
+								<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
                             </li>
                         </ul>
                     </div>
 
                     <ul class="navbar-nav mx-auto logo-desktop">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#"><img src="images/logo.png" alt="Vista Pro" /></a>
+                            <a class="nav-link" href="#"><img src="images/testimages/BUlogo.jpg" alt="" /></a>
                         </li>
                     </ul>
 
@@ -360,7 +362,7 @@
                             <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
                         </li>
                         <li class="nav-item">
-							<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class="fa-brands fa-tiktok"></i></a>
+							<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -382,6 +384,7 @@
 
 
 </html>
+
 
 
 
